--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-yandex-maps": "^4.6.0",
+    "@pbe/react-yandex-maps": "^1.2.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "use-debounce": "^10.0.1"
   },
   "devDependencies": {
@@ -29,6 +29,5 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
-  },
-  "packageManager": "yarn@4.3.1"
+  }
 }
